[package]
name = "openssh"
version = "0.9.0-rc.1"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2021"
rust-version = "1.56.1"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "SSH through OpenSSH"
repository = "https://github.com/openssh-rust/openssh.git"

keywords = ["ssh","remote","openssh","orchestration"]
categories = ["network-programming", "api-bindings"]

[badges]
azure-devops = { project = "jonhoo/jonhoo", pipeline = "openssh", build = "23" }
codecov = { repository = "jonhoo/openssh-rs", branch = "master", service = "github" }
maintenance = { status = "experimental" }

# docs.rs-specific configuration, shamelessly copied from
# https://stackoverflow.com/a/61417700/8375400.
#
# To test locally, use ` ./build_doc.sh`
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["process-mux"]
process-mux = []
native-mux = ["openssh-mux-client"]

[dependencies]
tempfile = "3.1.0"
shell-escape = "0.1.5"
tokio = { version = "1", features = [ "process", "io-util", "macros" ] }
tokio-pipe = "0.2.8"

libc = "0.2.112"
io-lifetimes = "0.5"

once_cell = "1.8.0"
dirs = "4.0.0"

openssh-mux-client = { version = "0.14.3", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
regex = "1"
tokio = { version = "1", features = [ "full" ] }

[[example]]
name = "native-mux_tsp"
required-features = ["native-mux"]

[[example]]
name = "tsp"
required-features = ["process-mux"]
