[package]
name = "openssh"
version = "0.9.0-rc.3"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2021"
rust-version = "1.56.1"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "SSH through OpenSSH"
repository = "https://github.com/openssh-rust/openssh.git"

keywords = ["ssh","remote","openssh","orchestration"]
categories = ["network-programming", "api-bindings"]

exclude = ["ci-target", "*.sh"]

[badges]
azure-devops = { project = "jonhoo/jonhoo", pipeline = "openssh", build = "23" }
codecov = { repository = "jonhoo/openssh-rs", branch = "master", service = "github" }
maintenance = { status = "experimental" }

# docs.rs-specific configuration, shamelessly copied from
# https://stackoverflow.com/a/61417700/8375400.
#
# To test locally, use ` ./build_doc.sh`
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["process-mux"]
process-mux = []
native-mux = ["openssh-mux-client"]

[dependencies]
shell-escape = "0.1.5"
tokio = { version = "1", features = [ "process", "io-util", "macros" ] }

[target.'cfg(unix)'.dependencies]
# tempfile is used on unix to create tempdir for control socket
tempfile = "3.1.0"

# dirs is used on unix to decide the default prefix for tempdir
dirs = "4.0.0"

# libc is used on unix for function `dup`
libc = "0.2.112"

# once_cell is used on unix to cache the default prefix for tempdir
# and used in feature `native-mux` to cache `/dev/null` fd.
once_cell = "1.8.0"

# io-lifetime is used on unix to store fd in `Stdio`
io-lifetimes = "0.5"

# tokio-pipe is used on unix to provide `ChildStdin`, `ChildStdout` and `ChildStderr`.
tokio-pipe = "0.2.8"

openssh-mux-client = { version = "0.14.4", optional = true }

[target.'cfg(windows)'.dependencies]
openssh-mux-client = { package = "blank", version = "0.1.0", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
regex = "1"
tokio = { version = "1", features = [ "full" ] }

[[example]]
name = "native-mux_tsp"
required-features = ["native-mux"]

[[example]]
name = "tsp"
required-features = ["process-mux"]
