[package]
name = "mux_client_impl"
version = "0.1.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "SSH through OpenSSH"
repository = "https://github.com/jonhoo/openssh-rs.git"

keywords = ["ssh","remote","openssh","orchestration"]
categories = ["network-programming", "api-bindings"]

[dependencies]
tempfile = "3.1.0"
tokio = { version = "1", features = [ "process", "io-util", "rt" ] }

openssh-mux-client = "0.2.0"
tokio-pipe = "0.2.1"
once_cell = "1.8.0"
nix = "0.22.1"
thiserror = "1.0.29"

[dev-dependencies]
lazy_static = "1.4.0"
regex = "1"
tokio = { version = "1", features = [ "full" ] }
